issue848: Refactor session management across controllers, update `User` and `Profile` relationship, enhance authentication handling, and improve HTML templates for error pages and profile editing.